最新最酷炫的内阁

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -100,6 +100,7 @@
  HNN_Tan_Yan_Kai: "谭延闿"
  POLITICS_HNN_Tan_Yan_Kai_DESC:0 "谭延闿起初拥护清王朝改良、立宪，但满清崩溃后其政治立场越发革命化。民国初年，谭延闿出任湖南都督，但后来袁世凯将其罢免，由汤芗铭取而代之，后者借袁世凯的旗号残酷镇压革命党。\n\n然而1916年，汤屠户被逐出长沙，刘人熙接任湖南督军。然而他无力掌控局面，谭延闿复任省长兼督军。段氏皖系在北京掌权后，他再次被迫下野。而新任督军张敬尧过于腐败无能，故又被逐出湖南，谭延闿再次回湘。1920年，谭延闿三次出任湖南督军，主张联省自治，和平统一中国。\n\n同年，他再被程潜、赵恒惕逼迫下野，于是离湘赴粤投靠孙中山。1922年，谭延闿成为国民党正式党员，次年他试图为国民党重夺湖南，但被赵恒惕所部击退。北伐期间，他任第二军军长，但德军介入、广州沦陷后，第二军在湖南被包围。汤芗铭战后赦免了谭延闿及其部下，谭勉强接受特赦，从此隐姓埋名，直到省议会重建。不过，谭延闿报国之心尚存，如果条件允许他不介意重新加入国民党。"
  POLITICS_HNN_Tan_Yan_Kai_kmt_DESC:0 "谭延闿起初拥护清王朝改良、立宪，但满清崩溃后其政治立场越发革命化。民国初年，谭延闿出任湖南都督，但后来袁世凯将其罢免，由汤芗铭取而代之，后者借袁世凯的旗号残酷镇压革命党。\n\n然而1916年，汤屠户被逐出长沙，刘人熙接任湖南督军。然而他无力掌控局面，谭延闿复任省长兼督军。段氏皖系在北京掌权后，他再次被迫下野。而新任督军张敬尧过于腐败无能，故又被逐出湖南，谭延闿再次回湘。1920年，谭延闿三次出任湖南督军，主张联省自治，和平统一中国。\n\n同年，他再被程潜、赵恒惕逼迫下野，于是离湘赴粤投靠孙中山。1922年，谭延闿成为国民党正式党员，次年他试图为国民党重夺湖南，但被赵恒惕所部击退。北伐期间，他任第二军军长，但德军介入、广州沦陷后，第二军在湖南被包围。汤芗铭战后赦免了谭延闿及其部下，谭勉强接受特赦，从此隐姓埋名，直到省议会重建。不过，谭延闿报国之心尚存，如今国府重建，革命再启，他将同程潜、唐生智两位将军一同再造民国！"
+ POLITICS_HNN_Tan_Yan_Kai_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1880年1月25日，大清帝国 湖南省 茶陵县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g谭延闿起初拥护清王朝改良、立宪，但满清崩溃后其政治立场越发革命化。民国初年，谭延闿出任湖南都督，但后来袁世凯将其罢免，由汤芗铭取而代之，后者借袁世凯的旗号残酷镇压革命党。\n\n然而1916年，汤屠户被逐出长沙，刘人熙接任湖南督军。然而他无力掌控局面，谭延闿复任省长兼督军。段氏皖系在北京掌权后，他再次被迫下野。而新任督军张敬尧过于腐败无能，故又被逐出湖南，谭延闿再次回湘。1920年，谭延闿三次出任湖南督军，主张联省自治，和平统一中国。\n\n同年，他再被程潜、赵恒惕逼迫下野，于是离湘赴粤投靠孙中山。1922年，谭延闿成为国民党正式党员，次年他试图为国民党重夺湖南，但被赵恒惕所部击退。北伐期间，他任第二军军长，但德军介入、广州沦陷后，第二军在湖南被包围。汤芗铭战后赦免了谭延闿及其部下，谭勉强接受特赦，从此隐姓埋名，直到省议会重建。不过，谭延闿报国之心尚存，如今国府重建，革命再启，他将同程潜、唐生智两位将军一同再造民国！§!" 
  HNN_zhao_hengti: "赵恒惕"
  POLITICS_HNN_ZHAO_HENGTI_DESC:0 "湖南督理赵恒惕治理湖南已有十余年之久了。1880年他出生于湖南衡州府，1906年考入日本陆军士官学校，主修炮兵专业。进入学校前一年，赵恒惕还加入了同盟会。辛亥革命中，被湖北都督黎元洪任为左翼军司令。1913年追随谭延闿参加二次革命，率师攻鄂，旋被袁世凯派遣入湘的汤芗铭俘获，押解入京判刑10年。1915年经黎元洪、蔡锷等具保，获释出狱。次年，回湖南，任湘军第一师师长，嗣后代督军。\n赵恒惕主持了亚洲第一个省宪运动，制定湖南省宪法、推动民选省议会和民选省长，赵恒惕作为省长，自己主持制定省宪限制省长权力，这难能可贵。\n1926年，因反对广东国民政府北伐军入湘作战，被唐生智逼迫下台。赵恒惕向好友吴佩孚求援，助其返湘。虽成功复位，但赵恒惕心中却有不满，他希望自己的督理之位为民选得出，而非中央政府委派。\n赵恒惕隶属于八省联合，虽然他位于本省权力之巅，不必直接听命于南京方面的孙传芳，但为了避免与德国交恶，他选择了与其为伍。\n如今在八省联合瓦解后，赵恒惕终于再次确立了自己的独立地位，并使湖南重新恢复自治。"
  POLITICS_HNN_ZHAO_HENGTI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1880年1月12日\n大清帝国 湖南 衡山\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§g衡阳市长赵恒惕治理湘东南已有十余年之久了。1880年他出生于湖南衡州府，1906年考入日本陆军士官学校，主修炮兵专业。进入学校前一年，赵恒惕还加入了同盟会。辛亥革命中，被湖北都督黎元洪任为左翼军司令。1913年追随谭延闿参加二次革命，率师攻鄂，旋被袁世凯派遣入湘的汤芗铭俘获，押解入京判刑10年。1915年经黎元洪、蔡锷等具保，获释出狱。次年，回湖南，任湘军第一师师长，嗣后代督军。\n赵恒惕主持了亚洲第一个省宪运动，制定湖南省宪法、推动民选省议会和民选省长，赵恒惕作为省长，自己主持制定省宪限制省长权力，这是难能可贵的。\n1926年，因反对广东国民政府北伐军入湘作战，被唐生智逼迫下台。赵恒惕向好友吴佩孚求援，助其返湘。但是却被汤芗铭抢先一步，尽管二人随后达成了一定的妥协，但是双方也都不满意，当南京的涟漪波及湖南时，赵恒惕也有着自己的行动。§!"
@@ -119,7 +120,6 @@
  HNN_Dong_Biwu_hog:0 "董必武"
  HNN_Pong_Dehuai_hog:0 "彭德怀"
  HNN_Tang_Shenming_hog:0 "唐生明"
- HNN_Hu_Hanming_hog:0 "胡汉民"
  HNN_Lin_Biao_hog:0 "林彪"
  HNN_tan_yan_kai_hog:0 "谭延闿"
  HNN_chen_san_li_hog:0 "陈三立"
@@ -137,20 +137,28 @@
  HNN_Chen_Yi_for:0 "陈毅"
  HNN_Zhou_En_Lai_for:0 "周恩来"
  HNN_Geng_Biao_for:0 "耿飚"
+ HNN_guo_moruo_for:0 "郭沫若"
+ HNN_li_wei_han_for:0 "李维汉"
  HNN_tang_xiangming_hog:0 "汤芗铭"
  HNN_shi_ding_wu_hog:0 "石顶武"
  HNN_shi_tai_xu_hog:0 "太虚法师"
  HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
  HNN_Mao_Ze_Dong_eco:0 "毛泽东"
+ HNN_xiao_ke_sec:0 "萧克"
  HNN_Shang_Kun_sec:0 "杨尚昆"
+ HNN_ren_bishi_sec:0 "任弼时"
+ HNN_luo_yi_nong_sec:0 "罗亦农"
+ HNN_shi_tai_xu_sec:0 "太虚法师"
  HNN_Qiu_Hui_Zuo_sec:0 "邱会作"
  HNN_Li_Xian_Nian_eco:0 "李先念"
+ HNN_Chen_Yun_eco:0 "陈云"
  HNN_Li_Fu_Chun_eco:0 "李富春"
  HNN_hua_luo_geng_eco:0 "华罗庚"
+ HNN_zhao_zi_yang_eco:0 "赵紫阳"
+ HNN_Bo_Yi_Bo_eco:0 "薄一波"
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
  HNN_tian_yingzhao:0 "田应诏"
- HNN_he_yaozu:0 "贺耀祖" 
  HNN_yuan_zuming:0 "袁祖铭"
  HNN_long_yunfei:0 "龙云飞"
  HNN_mao_ze_dong:0 "毛泽东"
@@ -158,13 +166,17 @@
  HNN_zhou_xicheng:0 "周西成"
  HNN_he_long:0 "贺龙"
  HNN_he_jian:0 "何键"
- HNN_song_xilian:0 "宋希濂"
  HNN_Teng_Daiyuan:0 "滕代远"
  HNN_tang_shengming:0 "唐生明"
  HNN_tao_zhiyue:0 "陶峙岳"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
- HNN_Fang_Ding_Ying:0 "方鼎英"
+ HNN_li_jiannong_for: "李剑农"
+ HNN_li_jiannong_for_desc:0 "§Y生于：§!§L1880年6月10日；大清帝国、湖南省邵阳§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L李剑农生于一户农民家庭，长大后在当地的一所书院就读。李剑农对当地不学无术的官员极为不满。1904年，他进入湖南中路师范学堂学习，主修历史，并顺利毕业。在日本学习经济学期间，李剑农与孙中山和同盟会相识。清朝覆灭后，李剑农成为了民国的坚定拥护者。\n\n李剑农在自己的报纸上鼓吹联省自治，抨击军阀乱政。李剑农对联省自治和改良政治的研究引起了湖南省长赵恒惕的注意，赵恒惕于1922年邀请李剑农到长沙起草省宪。此后，李剑农留在湖南，帮助赵恒惕推行其政治纲领。李剑农在推动联省自治方面的工作使他成为了赵恒惕的得力助手和湖南联省派中的一位出色理论家。§!"
+ HNN_huang_gonglue_sec: "黄公略"
+ HNN_huang_gonglue_sec_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
+ HNN_he_yaozu: "贺耀祖" 
  POLITICS_HNN_HE_YAOZU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年5月8日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g贺耀祖生于一户富裕人家，曾在贺氏家族学校接受私塾教育，后来又入学玉潭书院。他先是就读于湖南陆军小学第一期，后来又进入武昌陆军第三中学，毕业后因表现优异被送往日本陆军士官学校学习。在那里，贺耀祖加入了同盟会，并参加了辛亥革命。在黄兴的建议下，他回到日本继续深造，并于1916年回国参与了孙中山领导的一系列革命运动。\n\n次年，贺耀祖加入了赵恒惕领导的湘军，并在六年内稳步晋升，从团长一路晋升到师长。然而贺耀祖却在北伐战争期间加入国民党，尽管及时的脱身使其最终免遭北伐失败所带来的巨大政治影响。贺耀祖虽才华横溢，但过往的叛变经历使其难以晋升地方高层——不过他仍是湖南省参谋部的重要成员。§!"
+ HNN_song_xilian: "宋希濂"
  POLITICS_HNN_SONG_XILIAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年4月9日，大清帝国 湖南省 湘乡县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g宋希濂生于一户富裕农民家庭，在这个女孩为主的家里，他是家中长子，由父、叔专门教授古文诗词。宋希濂先后就读于多所私塾，并于1921年入读长沙长郡中学，在那里他首次接触到革命活动。宋希濂积极投身于学生运动，并与同学们共同创办了《雷声》墙报，批评帝国主义、小军阀，甚至由于赵恒惕处决了工人运动领袖黄爱、庞人铨，而开始批判当局。\n\n从程潜创办的大本营陆军讲武学校毕业后，宋希濂说服陈赓等人与他一同前往新开办的黄埔军校。作为黄埔军校一期学员中最年轻的毕业生，他于1924年6月加入国民党，并参与了讨伐陈炯明的东征战役。宋希濂部在北伐战争中表现出色，甚至与直系军阀孟昭月部展开过肉搏战。\n\n然而，随着北伐军全线崩溃，宋希濂领溃兵撤入贵州，在那里与往日恩师程潜重逢。§!\n\n§Y重要信息：人事关系上宋希濂不属于第六军，但他与第六军的关系由来已久，因此实际上他被看作第六军的一员。此外，他与左派人士陈赓私交甚密。§!"
  HNN_chen_quzhen_bio:0 "§g陈渠珍1903年考入湖南武备学堂第一期附设的兵目班，1904年因成绩优异升入将弁班，1906年毕业分配在长沙新军第四十九标任队官，并加入中国同盟会。1907年经湖北巡抚张学簪介绍，持赵尔巽的介绍信，偕同乡、旧学友林修梅等五人投奔川边大臣赵尔丰，任新军六十五标队官。宣统元年（1909年）英军入侵西藏，七月，钟颖率部进军西藏，陈渠珍被任命为援藏军一标三营（管带林修梅）督队官，参加了工布江达、波密等地战役。川边大臣赵尔丰抵昌都，撤销林的管带职务，委陈渠珍代之，进军驻守工布江达。1911年10月，武昌起义爆发的消息传到西藏后，进藏川军中的哥老会组织积极响应，其部属还杀死了协统罗长裿。第一次驱汉事件后，陈渠珍深知形势危殆，策动手下湘黔滇籍官兵115名，取道羌塘草原，翻越唐古拉山入青海返回内地，辗转七个多月，直至民国元年6月到达西宁，全队仅七人生还。回到湘西，负责督办开河工程，湘西镇守使田应诏保奏其开河有功，北洋政府查办在西藏时协统罗长琦被杀案，被诬告陈是主谋，逮解送京。陈渠珍力辩得直，又得傅良佐担保，方得脱案。1913年任湘西镇守使署中校参谋、副参谋长。主办军官训练团。1917年护法战争时期，湘西镇守使田应诏组织护法军第一路军，陈任参谋长兼第一梯团长，旋又代理第一路军司令。1920年湘西镇守使田应诏中将因拥护程潜被谭延闿架空调往长沙；谭延闿任命陈渠珍为湘西巡防军统领、辰沅剿匪总指挥。自此掌握了湘西军政大权。1925年，四川军阀熊克武部侵入湘西。省长赵恒惕任命陈为澧州镇守史、湘西屯边使。自此陈渠珍彻底稳定了对湘西的控制权，而在大革命期间，其同样两面受用，北伐军时期，陈渠珍加入革命军。汤芗铭时期，陈渠珍又宣布效忠汤芗铭，但无论如何，始终没有人能撼动陈渠珍对湘西的控制。时至今日无人不称其为“湘西王”。§!"
  HNN_tian_yingzhao_bio:0 "§g田应诏于1896年进入湖南陆军将弁学堂学习，后被选送至东京振武学校（一所专为中国培养军事人才的学院）深造。1904年，田应诏于日本结识了孙中山，并加入了他的革命组织——同盟会。1916年，田应诏回国担任四川陆军速成学堂总办，该校培养出了未来的四川军阀刘湘和杨森，随后他参与了辛亥革命。\n\n在谭延闿1913年回到湖南后，任命他为辰沅道尹、镇筸镇台兼湘西镇守使。当“护法战争”爆发时，田应诏遵从副参谋长陈渠珍之策静观其变，直到邻近军阀张学济投靠孙中山，他才宣布效忠广州一方。战争期间，田应诏占领了常德城，但后来又被冯玉祥赶出湘西，被迫退守沅陵。\n\n在此期间，田应诏逐渐染上鸦片瘾，并将越来越多的权力移交给了陈渠珍。1921年，新任湖南省长赵恒惕邀请田应诏前往长沙重组湘西镇守使衙署。田应诏任命留守的陈渠珍为代理湘西镇守使，这一状况一直延续至今。§!"
@@ -179,10 +191,11 @@
  POLITICS_HNN_TANG_SHENGMING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年10月10日；大清帝国、湖南省东安县§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g唐生明是唐生智将军的四弟，1926年毕业于黄埔军校，国民党北伐失败后，他跟随兄长躲进了闽赣山区。1932年闽赣根据地形成后，唐生明继续为兄长效力，1936年八省联合崩溃后，兄弟两人合力为国民党拿下了湖南，他晋升为将军标志着第八军在湖南政坛的影响力日益增强。\n\n§Y重要信息：唐生明的晋升是唐生智影响力增长的显著证据。许多人认为唐生智提拔弟弟就是赤裸裸的搞裙带关系，但其实唐生明还是有一定能力的。§!"
  ARMY_TAO_YUE_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1892年9月18日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g陶峙岳出生于湖南宁乡县仙凤乡，1911年，陶峙岳毕业后赴武汉考入陆军第三中学，同年参加辛亥革命并加入同盟会。1914年秋，陶峙岳在陆军第一预备学校毕业后到北京北苑陆军第八师受入伍训练，充任军官递补生。1915年春，陶峙岳转入保定陆军军官学校（三期）。1916年毕业后回到家乡，任湖南省督军公署参谋处上尉参谋。1917年，陶峙岳任谭延闿部“护字营”营参谋长兼第一支队教导员，不久升任营长。随着谭延闿退出湖南，陶峙岳本想同老上司一同离开，但是经过同事兼同乡的叶开鑫劝导下，最终留在湖南。并于1923年，赵恒惕任陶峙岳为湘军第一师上校团长。\n\n而在北伐战争期间，陶峙岳所部对于湖南的战况则是两不相帮，及不参与也不表态，虽然这样的行为本身就相当于支持北伐军，但在国民党北伐失败。直系重返湖南后，混乱的省政府他也无法对陶峙岳有更多的责罚，只是暂时降薪。近十年来，陶峙岳与其他湘军一直保持着这种貌合神离的状态。§!"
  ARMY_XIA_DOU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1885年，大清帝国 湖北省 麻城县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g夏斗寅出生在湖北麻城县一户贫苦农民家庭，父亲早逝，13岁时母亲也因病离世，不得不背井离乡独自谋生，浪迹至武昌后，进入一所普通学校半工半读，1906年在武汉加入共进会，行伍出身，入湖北新军第三十二标从军。1911年，率部参加辛亥革命。一度退役经商，后前往山西投奔同乡孔庚，不久回乡，出任湖北新兵训练总监，在湖北陆军第一师师长石星川部下任掌旗官。1917年，石星川积极响应孙中山发起的护法运动，在沙市宣布独立。由于夏斗寅英勇善战，石星川提拔他担任工兵营营长。不久湖北督军王占元下令剿灭石川星部，经过激战，石星川部全军溃败。夏斗寅骑马星夜向沙市逃奔，途中捡到一口装满钞票的皮箱，走到湖北公安县，夏将团旗插在要道口，招兵买马，声称他奉命收容部队，立即开箱发饷，有枪的发5元，无枪的发1元，又招来不少入伍的。就这样他在湘鄂边界成立了武装，人称“皮包将军”。1919年，夏率部参加湘军对王占元的战争，再次兵败，退往湖北、江西和湖南交界地区。1926年，北伐军占领武汉后，夏斗寅的鄂军第一师被改编为国民革命军独立第14师。大革命失败之后，夏斗寅和鲁涤平等人选择留在湖南，接受赵恒惕的管辖。与鲁涤平的历史身份问题不同，夏斗寅由于湖北系与直系的关系获得了吴佩孚等人的青睐，他仍然能够在湘军内领兵作战。§!"
- HNN_Liu_Yong_Yao:0 "刘咏尧"
+ HNN_Liu_Yong_Yao: "刘咏尧"
  ARMY_LIU_YONG_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年8月18日，大清帝国 湖南省 醴陵县§!\n§Y派系：§!§c联省派\n§Y军旅生涯：§!§g刘咏尧1922年毕业于湖南岳云中学，1923年赴广州大本营军政部陆军讲武学校。1924年，转入中央陆军军官学校步科第一期。当时的黄埔军校《招生简章》要求，报考者年龄要在“18岁以上，25岁以内”，但，刘咏尧不满17岁，还差一岁。他将自己的年纪报大了两岁，方得以入伍。1927年，大革命期间任国民革命军陆军中校营长、上校团长。在大革命失败后成为留湘投靠赵恒惕的一部分右派军官的一份子。但是据传，刘咏尧始终和戴春风等人联系不断，与复兴社也有密切往来。这使得他也不断被汤芗铭猜忌，但与此同时又因为刘咏尧与陶峙岳部队间的密切往来，赵恒惕不得不继续任用他。§!"
+ HNN_Fang_Ding_Ying: "方鼎英"
  ARMY_FANG_DING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1888年，大清帝国 湖南省 新化县§!\n§Y派系：§!§c联省派\n§Y军旅生涯：§!§g方鼎英15岁时，赴日本留学，参加同盟会。回国后在保定军官学校任炮兵教官，参加武昌起义，民国六年，再次赴日本留学。民国十年春，回国在湘军中任职。后任黄埔军校入伍生部部长，进行诸多军事教育改革。在大革命失败之后，方鼎英回到湖南投靠其学生刘咏尧，在其所部任职。§!"
- HNN_li_minghao:0 "李明灏"
+ HNN_li_minghao: "李明灏"
  POLITICS_HNN_LI_MING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1897年9月19日，大清帝国 湖南省 醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g李明灏是一名天生的军人。20岁时，他考入清河陆军第一预备学校第四期学习，由于表现优异，毕业后被保送到日本陆军士官学校深造。毕业后，李明灏前往长沙陆军讲武堂任教。1923年，应程潜之邀，李明灏在孙中山领导的广州大本营军政部中担任中校，在此过程中加入了国民党。\n\n同年，孙中山任命程潜为军政部长，并担任黄埔军校校长（尽管任期很短）。程潜随后委任他为上校兼军校教育长。不久后，李明灏改任由孙中山领导的攻鄂军司令部参谋，后来成为程潜东征部队的参谋长。作为第17师54团上校团长，李明灏率部参加了北伐，在北伐失败后，他又跟随程潜和其他第六军同僚一道进入贵州。然而，李明灏始终保持着警惕，继续勤奋工作，最终被任命为第17师师长。\n\n随着第六军和第八军之间的紧张局势不断升级，程潜再次提拔李明灏为少将，试图通过一系列快速任命在与唐生智的较量中扳回一城。§!"
  HNN_lu_dangping: "鲁荡平"
  POLITICS_HNN_lu_dangping_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1895年，大清帝国 湖南省 宁远县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g鲁荡平早年曾经在湖南铁路学堂学习，后来考入北京法政大学。他起初是同盟会会员，后改入革命中华党。其兄鲁涤平担任建国湘军第二军军长期间，他随军担任参谋。§!" 
@@ -192,35 +205,35 @@
  POLITICS_HNN_ZHANG_ZHEN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1894年，大清帝国 河南省 罗山县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g1918年，张轸考入保定陆军军官学校。1919年，被派往日本陆军士官学校学习。1923年回国后，历任陕西陆军第一师参谋、河南陆军训练处战术教官、黄埔军校第四期战术总教官。第一次北伐战争期间，张轸任国民革命军第六军第十九师五十六团团长。1927年4月，张轸出任第十八师师长，后又升任副军长兼师长。北伐战争失败后，张轸投奔冯玉祥部下刘镇华，在其所部任师参谋长，但因为身份缘故遭到阎锡山等晋系将领猜忌。在得到程潜来信后决定脱离晋系，重新投靠老上司。§!"
  HNN_Wen_Chao_Ji: "文朝籍"
  POLITICS_HNN_WEN_CHAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1897年，大清帝国 广东省琼州府文昌县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g文朝籍毕业于云南陆军讲武堂，1919年起任警卫团排长、中尉副官，粤军第一军二师连长。北伐战争期间任国民革命军第六军十七师少校副官、中校营长、上校团长。§!"
- HNN_ye_kaixin:0 "叶开鑫"
+ HNN_ye_kaixin: "叶开鑫"
  ARMY_YE_KAIXIN_DESC:0 "§Y指挥官介绍\n生于：§!§g1885年，大清帝国湖南省宁乡县§!\n§Y派系：§!§H赵恒惕派§!\n§Y军旅生涯：§!§g叶开鑫生于湘长于湘。1903年，他前往无锡，入学江南将弁学堂。毕业后，他返回湖南，并于1913年出任湘军第二师营长，逐渐成为赵恒惕的亲信。1923年，赵恒惕升叶开鑫为湘军第三师师长。\n\n国民党北伐军进军湖南时，叶开鑫立即领兵对战唐生智，但最后还是被赶出湖南，和赵恒惕一起投奔吴佩孚的直系。吴佩孚令叶开鑫出任湘军总司令。直系扭转战局后，叶开鑫部重夺长沙，将湖南正式纳入直系手中，不过，叶开鑫意欲将湖南大权奉还赵恒惕也不是什么秘密。\n\n随着国民党被赶出湖南，汤芗铭与赵恒惕的协商，赵退居衡阳。他并非孙传芳的铁杆，但还是接受了加入八省联合的要求，只不过，他并不相信孙传芳会接受湖南自治，也不相信孙氏可以镇压闽赣地区的国民党，所以一直在湘东囤积重兵。\n\n在这近十年里，叶开鑫一直满足于现状，忠于赵恒惕，并与北直系保持友好，是赵恒惕可以放心依靠的部将之一，赵恒惕本人亦对其十分支持。§!"
- HNN_gong_xian:0 "龚宪"
+ HNN_gong_xian: "龚宪"
  HNN_gong_xian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1892年；大清帝国、湖南省长沙§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g龚宪曾在长沙接受军事训练，并加入了湖南第一军。他为贺耀祖效力，而贺耀祖则是赵恒惕的下属。北伐开始时，赵恒惕几乎被彻底赶出湖南，但随着国民党的崩溃，直系军阀得以让赵恒惕重新掌管湖南。龚宪是一名公认的勇将，尽管有些人可能会说他有些鲁莽。§!\n\n§Y重要信息：他是一名鼓舞人心的军官，经常展现出舍生忘死的勇气，在北伐战争中，他率领部下与以寡敌众，日夜兼程追击敌军。\n\n他总是身先士卒，在战斗中多次与死神擦肩而过，但他总能奇迹般地全身而退。§!"
- HNN_jiang_chuou:0 "蒋锄欧"
+ HNN_jiang_chuou: "蒋锄欧"
  HNN_jiang_chuou_commander_desc:0 "§Y陆军将领介绍\n生于：§!§g1891年；大清帝国、湖南省东安§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g蒋锄欧从广西陆军干部学堂毕业后参加了辛亥革命，之后加入了湘军。蒋锄欧参加了许多战役，包括护国运动、驱逐张敬尧、击退企图重返湖南的谭延闿以及唐生智叛乱等。在叶开鑫的领导下，蒋锄欧一直是赵恒惕麾下的一名能干的军官，尽管对于一名军人来说，叶开鑫可能有些过于热衷政治了。§!\n\n§Y重要信息：蒋锄欧是一位著名的军事现代化倡导者，他对装甲车和铁道炮的发展尤其感兴趣。他甚至还撰写了一篇名为《欧美军事交通考察记》的文章，详细介绍了西方国家的各种先进技术。§!"
- HNN_tang_shengzhi:0 "唐生智"
+ HNN_tang_shengzhi: "唐生智"
  HNN_tang_shengzhi_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1889年10月12日；大清帝国、湖南省东安§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g唐生智原属于赵恒惕湘系军阀，其在生涯早期与谭延闿有过交锋。当时唐生智协同贺耀祖、叶开鑫把谭延闿从衡山赶回了广州。在接下来几年里，唐生智与叶开鑫不和，双方摩擦日渐增加，而前者认为后者更受赵的青睐。1926年3月，唐生智发动兵变反对赵恒惕，但是兵败而被迫逃往广州。\n\n唐生智受到了广州方面的欢迎，其部被改组为国民革命军第八军。唐生智和他统帅的第八军很快得以在北伐战争中证明自己的能力。他率部大举进攻湖南，赶走了赵恒惕，还接连战胜吴佩孚部。可惜北伐随后遭到了德意志帝国的干涉，总司令蒋介石惨死，中央委员会流亡巴黎，背靠德国的吴佩孚赢下了战争。\n\n唐生智率领第八军逃窜到了江西和福建的山区，并与孙传芳的八省联合斗争了数年。上海起义后，邓演达和宋庆龄率领临时行动委员会附属部队南下加入了唐生智，并建立了闽赣根据地以继续反抗。尽管国民党的情况不容乐观，这位“佛教将军”却坚信总有一天，他会将故乡从赵恒惕的不公统治中解放出来。§!"
- HNN_cheng_qian:0 "程潜"
+ HNN_cheng_qian: "程潜"
  HNN_cheng_qian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1882年3月31日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g程潜生于一个富裕的耕读世家，从小接受着传统的儒家教育。十六岁便过童试中秀才、准备踏入学仕之路。然而在了解到19世纪中外时局后，程潜决定放弃科举之途、弃文习武，转至湖南武备学堂进修。成绩优异的他，被保送至日本留学。在那里，程潜结识了黄兴、宋教仁、李烈钧等革命家；又在1905年与孙中山面谈后当即加入同盟会。日后，他与唐继尧一同于日本陆军士官学校炮科毕业。\n\n辛亥革命爆发，程潜参加长沙会战。加入国民党后，他又在护国运动和护法运动中大展身手，证明了对孙中山理想的忠诚。1917年程潜率领湘南护法军驱逐了汤芗铭，随后被民主选举为湖南省长。\n\n由于其在与陈炯明冲突中支持孙中山，因而颇受器重、并于北伐战争前夕自办军校培养军事人材。孙中山建立黄埔军校时，曾一度考虑以程潜为校长。赢得东征战役胜利后，其被选为国民党中央执行委员会委员。同年其所辖湖南部队改组为国民革命军第六军。\n\n北伐战争开始后，他曾亲率第六军赴南昌作战。其部勇猛无比，攻无不克。可叹北伐事业失利，深陷湖南西部的第六军只得跟随国民党残部流窜到贵州。万幸的是程潜的第六军保全了实力，得以凭此与唐继尧谈判，争取其对国民党残部的庇护。\n\n如此一支雄师，在程潜的率领下在贵州韬光养晦，静静地等待崛起的时机。届时，第六军将再次尝试夺取湖南。这位老革命不仅在国民党内广受尊重，也在湖南省内威名显赫，其革命夙愿实现之日也许不远了。§!"
  HNN_yang_jie: "杨杰"
  HNN_yang_jie_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1889年1月25日；大清帝国、云南省大理§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g杨杰自幼勤奋好学，所提问题往往把老师同学问的膛目结舌，据说其拥有过目不忘之才。然而，在错过了京师大学的考期后，杨杰最终转入云南陆军速成学堂，开始了他的军旅生涯。由于表现优异，他后来被送往保定武备学堂学习，并于1907年被送往日本陆军士官学校深造。\n\n在那里，杨杰结识了蒋介石，并于1910年加入同盟会。1911年毕业后，杨杰回国参与了辛亥革命。在获得上校军衔后，杨杰返回云南加入蔡锷的滇军。在川滇两省担任诸多军职后，杨杰最终成为北京总统府的军事顾问兼国防部顾问，并于1921年远赴日本陆军大学校深造。\n\n在深入研究中国战史、地理、战略和战术后，杨杰成为了一名公认的杰出军事理论家。杨杰与孙中山、程潜和许崇智保持着书信联系，回国后出任孙岳的参谋长。1926年，他离职并加入国民革命军，出任第六军总参议兼师长。\n\n北伐结束后，程潜被迫流亡，杨杰则继续在军事理论领域发光发热，现已成为国民革命军中最有能力的将领之一。§!"
- HNN_liu_jianxu:0 "刘建绪"
+ HNN_liu_jianxu: "刘建绪"
  HNN_liu_jianxu_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1892年10月2日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g1913年，刘建绪进入进陆军第二预备学校，开始了其军旅生涯，走上了一条相当标准的军官职业道路。1915年毕业后，刘建绪进入保定军校学习，并于此结识了后来第八军军长何键。毕业后，刘建绪加入赵恒惕麾下湘军第一师，后来又加入了何键的地方游击队，抵抗北洋军阀。追随何键至唐生智麾下后，刘建绪作战英勇无畏，成为了何键的得力干将和知己。\n\n北伐战争期间，刘建绪旅在克复岳阳、夺取龟山和汉阳兵工厂、策反汉阳防守司令刘佐龙、光复汉阳汉口等战斗中表现突出。北伐结束后，刘建绪随何键撤至闽赣根据地，二人也在第八军内部建立起反社会主义的势力范围。\n\n在何键升任将军后，刘建绪也随之升至湖南清乡督办署任职，继续为其友人提供协助。§!"
- HNN_liu_xing:0 "刘兴"
+ HNN_liu_xing: "刘兴"
  HNN_liu_xing_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年11月22日；大清帝国、湖南省祁阳县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g1912年刘兴同唐生智一起进入保定陆军军官学校学习，二人因痛打教官引起陆军部震怒，将他们遣送回家。1916年，适逢湘人驱逐“汤屠户”汤芗铭，新任湖南督军刘人熙邀请刘兴和唐生智担职。刘兴在其好友帐下任职多年，一路升至旅长。1926年刘兴跟随被赵恒惕击退的唐生智，逃往广州。\n\n国民党和唐生智将其部队改组为国民革命军第八军，刘兴任第四师师长。北伐战争期间，刘兴身先士卒，率部与吴佩孚部激战，一举攻占汉口。尽管刘兴战绩辉煌，但北伐还是转向崩溃，刘兴又一次随唐生智逃亡到了闽赣乡间。如今距北伐已逾十载春秋，刘兴依然是唐生智忠实的跟班，一如当年离开保定之时。§!"
- HNN_gong_hao:0 "龚浩"
+ HNN_gong_hao: "龚浩"
  HNN_gong_hao_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省益阳县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g龚浩是唐生智在保定军官学校的同学，很早就对革命政治抱有同情。龚浩参加了1911年武昌起义和1916年护国战争。1921年回湘任唐生智部作战参谋。唐生智加入国民党后，龚浩任任国民革命军第八军前敌总指挥部参谋长。\n\n北伐战争失败后，龚浩跟随唐生智入赣，第八军也随之隐匿其间，直到临委会部队与他们汇合，共同创建了闽赣根据地。龚浩也许算不上唐生智最忠诚的属下，但他在协助传授唐生智部新兵兵法上，又是个出色的教头。龚浩素有为人谦逊、热情好客之名，广受喜爱。他闲暇时间常读历史和中国经典，对老子道家思想颇有兴趣。§!"
- HNN_tao_guang:0 "陶广"
+ HNN_tao_guang: "陶广"
  HNN_tao_guang_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省醴陵县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g陶广最初是个彩绘工人，后来弃艺从军，就读于北京和南京多所军校，学成后前往云南，在蔡锷部下任参谋。蔡锷死后他回到故乡湖南，在程潜、唐生智部先后任职。北伐期间，任第八军第二十六团团长。\n\n由于参加汀泗桥、贺胜桥等战役有功，他升任旅长。尽管武昌战役演变为了国民党的灾难，陶广还是设法为第八军保住了上千条枪，因而晋升师长。北伐崩溃后，其跟随唐生智入赣。在闽赣根据地的十年战火洗礼下，他成长为了一位经验丰富的游击战专家，深受唐生智敬重。§!"
- HNN_li_pinxian:0 "李品仙"
+ HNN_li_pinxian: "李品仙"
  HNN_li_pinxian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1890年4月22日；大清帝国、广西省苍梧县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g李品仙出生于苍梧县的一个望族家庭，他自幼长于经典，勤奋好学，擅属诗作文。他参与科举时，县试、府试一路过关斩将，但由于不小心漏抄一页试卷而折戟院试。\n\n仕途毁于一旦，李品仙决定报考蔡锷创办的广西陆军小学，开始其军旅生涯。1909年毕业后升入湖北第三陆军中学，后又于1911年毕业，同时直接参与了武昌起义。\n\n为了策应起义，李品仙冒险赴桂煽动当地革命，但因陆荣廷宣布独立而受挫。1913年，他到保定军校学习，次年毕业。由于不满于桂军，他又转入湘军任职，在那里他结识了学长唐生智。唐生智升一次官，李品仙就跟着被提拔，八年间他从排长升至旅长。跟随唐生智加入国民革命军后，李品仙被任命为第八军第三师师长，并参加了北伐战争，后又加入了国民党。北伐军兵败后，他在闽赣根据地顽强作战，静候时机。\n\n而最近，在程潜同唐生智的权力斗争中，李品仙又得到提拔，但他始终“不问政事”，专心于军事工作。§!\n\n§Y重要信息：李品仙受教育程度较高，平日里舞文弄墨，国民革命军中的同僚普遍认为他与人和善。§!"
  HNN_yang_xuancheng:0 "杨宣诚"
  HNN_yang_xuancheng_admiral_desc:0 "§Y海军将领介绍\n生于：§!§g1889年；大清帝国、湖南省长沙§!\n§Y派系：§!§L无派系§!\n§Y军旅生涯：§!§g杨宣诚生于一户家风朴实的传统家庭，自幼耕读。杨宣诚早年赴日本学习海军，后加入华兴会，这是由黄兴和宋教仁创立的同盟会前身组织之一。回国后曾任清军楚泰舰枪炮官。\n\n1913年，国民政府选派一批有功青年出国深造，杨宣诚经黄兴推荐被选派赴美国加州大学商学院。后因留学经费被取消，生活无着，乃再赴日本，任黄兴在东京开办的政法学校通译。他于1916年回国，在湖南高等师范任教，1920年冬应赵恒惕聘任湖南省政府交涉司司长。\n\n杨宣诚在赵恒惕、谭延闿政府中勤勤恳恳地工作了十多年，在省府中担任过多个新职位，积累了许多保障湖南水道安全的经验。然而，杨宣诚仍密切关注着新的革命性战法，他怀揣着重返海洋的雄心壮志，或许有朝一日杨宣诚能得偿夙愿。§!"
  HNN_Chen_Yi: "陈毅"
- ARMY_HNN_Chen_Yi_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g陈毅出身于一个小地主家庭，15岁时就读于成都甲种工业学校。1919年，陈毅赴巴黎勤工俭学，在那里结识了周恩来和蔡和森，接触到了马克思主义思想，这极大改变了他的人生轨迹。回国后，蔡和森将陈毅发展到中国工团党青年团中。\n\n1923年，陈毅在北京中法大学结识了颜昌颐、洪深等人，成为工团党在该校的支部书记。1924年，陈毅加入到茅盾领导的文学研究会，并当选其校的学生会主席。国民党的第一次改组后，革命统一战线形成，陈毅担任北京学生总会工团党党团书记，与国民党地方支部密切合作。\n\n1926年，日本帝国主义为支援奉系集团，用军舰炮轰了大沽炮台，国民军则还以颜色，以水雷封锁水域，是为大沽口事件。事发后，列强联合援引《辛丑和约》海口不得设防之条款，要求中国各军阀执行。陈毅参加了3月18日反对八国通牒大会，随后政府发起镇压，超过40名学生及市民遇害。他在“三一八”惨案中幸免于难，后被任命为工团党北方局书记，之后又回到四川，在朱德领导下担任军事职务，准备为中国革命发光发热。然而，老天并没有偏袒革命者，德国的干涉让国民革命运动轰然倒塌。在战乱中，陈毅随朱德率领的第三军撤往贵州。但随后他并没有继续随着败兵前往四川，在行军途中他得知了董必武的正在领导一场新的革命，而他决定投身其中，他始终相信着社会主义革命必将在中国实现。§!"
+ POLITICS_ARMY_HNN_Chen_Yi_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g陈毅出身于一个小地主家庭，15岁时就读于成都甲种工业学校。1919年，陈毅赴巴黎勤工俭学，在那里结识了周恩来和蔡和森，接触到了马克思主义思想，这极大改变了他的人生轨迹。回国后，蔡和森将陈毅发展到中国工团党青年团中。\n\n1923年，陈毅在北京中法大学结识了颜昌颐、洪深等人，成为工团党在该校的支部书记。1924年，陈毅加入到茅盾领导的文学研究会，并当选其校的学生会主席。国民党的第一次改组后，革命统一战线形成，陈毅担任北京学生总会工团党党团书记，与国民党地方支部密切合作。\n\n1926年，日本帝国主义为支援奉系集团，用军舰炮轰了大沽炮台，国民军则还以颜色，以水雷封锁水域，是为大沽口事件。事发后，列强联合援引《辛丑和约》海口不得设防之条款，要求中国各军阀执行。陈毅参加了3月18日反对八国通牒大会，随后政府发起镇压，超过40名学生及市民遇害。他在“三一八”惨案中幸免于难，后被任命为工团党北方局书记，之后又回到四川，在朱德领导下担任军事职务，准备为中国革命发光发热。然而，老天并没有偏袒革命者，德国的干涉让国民革命运动轰然倒塌。在战乱中，陈毅随朱德率领的第三军撤往贵州。但随后他并没有继续随着败兵前往四川，在行军途中他得知了董必武的正在领导一场新的革命，而他决定投身其中，他始终相信着社会主义革命必将在中国实现。§!"
  POLITICS_HNN_Chen_Yi_DESC:0 "陈毅出身于一个小地主家庭，15岁时就读于成都甲种工业学校。1919年，陈毅赴巴黎勤工俭学，在那里结识了周恩来和蔡和森，接触到了马克思主义思想，这极大改变了他的人生轨迹。回国后，蔡和森将陈毅发展到中国工团党青年团中。\n\n1923年，陈毅在北京中法大学结识了颜昌颐、洪深等人，成为工团党在该校的支部书记。1924年，陈毅加入到茅盾领导的文学研究会，并当选其校的学生会主席。国民党的第一次改组后，革命统一战线形成，陈毅担任北京学生总会工团党党团书记，与国民党地方支部密切合作。\n\n1926年，日本帝国主义为支援奉系集团，用军舰炮轰了大沽炮台，国民军则还以颜色，以水雷封锁水域，是为大沽口事件。事发后，列强联合援引《辛丑和约》海口不得设防之条款，要求中国各军阀执行。陈毅参加了3月18日反对八国通牒大会，随后政府发起镇压，超过40名学生及市民遇害。他在“三一八”惨案中幸免于难，后被任命为工团党北方局书记，之后又回到四川，在朱德领导下担任军事职务，准备为中国革命发光发热。然而，老天并没有偏袒革命者，德国的干涉让国民革命运动轰然倒塌。在战乱中，陈毅随朱德率领的第三军撤往贵州。但随后他并没有继续随着败兵前往四川，在行军途中他得知了董必武的正在领导一场新的革命，而他决定投身其中，他始终相信着社会主义革命必将在中国实现。n\n在统一战争期间，陈毅率领部队打下多次硬仗，在建国后荣获元帅之职，并长期担任外交部部长，如今他受周恩来委托肩负起中科院首届院长，并领导起整个国家，他身上的责任又重了许多。"
- HNN_Xiao_Ke:0 "萧克"
- ARMY_HNN_Xiao_Ke_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年7月14日；大清帝国、湖南省嘉禾县§!\n§Y军旅生涯：§!§g萧克出生于一个清贫的书香门第。幼年入私塾，读《四书》、《五经》；尔后，上高等小学，就读同善高小。1923年，考入嘉禾甲种简习师范学校。1925年冬，从本县甲种简易师范学校毕业后，只身前往广州。1926年初，考入国民政府军事委员会宪兵教练所（该教练所后归并黄埔军校），毕业后参加北伐战争，不久加入中国工团党。1928年1月，萧克任宜章县游击队长并参加湘南起义，随后率部并入边界革命根据地。§!"
+ HNN_Xiao_Ke: "萧克"
+ POLITICS_ARMY_HNN_Xiao_Ke_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年7月14日；大清帝国、湖南省嘉禾县§!\n§Y军旅生涯：§!§g萧克出生于一个清贫的书香门第。幼年入私塾，读《四书》、《五经》；尔后，上高等小学，就读同善高小。1923年，考入嘉禾甲种简习师范学校。1925年冬，从本县甲种简易师范学校毕业后，只身前往广州。1926年初，考入国民政府军事委员会宪兵教练所（该教练所后归并黄埔军校），毕业后参加北伐战争，不久加入中国工团党。1928年1月，萧克任宜章县游击队长并参加湘南起义，随后率部并入边界革命根据地。§!"
 
  if_they_accept:0 "如果他们同意：\n"
  HNN_chen_quzhen_effect:0 "§Y湘西军阀相关的决议§!增强"
@@ -1676,7 +1689,7 @@
  HNN_people_community_tt:0 "§L这是一项前无古人，后无来者的壮举§!"
  HNN_factory_change_tt:0 "§Y解锁一个新的工业公司§!"
 
- HNN_pai_xi:0 "邓小平（索雷尔主义）-极权派；周恩来（温和社会主义）/陈云（农业社会主义）/钱学森（乌托邦技官主义）/周扬（社会未来主义）-技官派；习仲勋（自由社会主义）-改良派；高岗（集权工团主义）/刘少奇（民主工团主义）-正统派；赵紫阳（中间路线）-自由派；胡耀邦（民主社会主义）-民生派；王震（国家工团/民族安保）-民族派。"
+ HNN_pai_xi: "邓小平（索雷尔主义）-极权派；周恩来（温和社会主义）/陈云（农业社会主义）/钱学森（乌托邦技官主义）/周扬（社会未来主义）-技官派；习仲勋（自由社会主义）-改良派；高岗（集权工团主义）/刘少奇（民主工团主义）-正统派；赵紫阳（中间路线）-自由派；胡耀邦（民主社会主义）-民生派；王震（国家工团/民族安保）-民族派。"
 
  HNN_totalist_party_proc:0 "极权派"
  HNN_totalist_party_proc_long:0 "极权派(Communist faction)\n§g极权派是中国工团党内的一群极左分子，甚至于相当一部分成员是马克思主义者。他们追忆俄国布尔什维克失败的革命，赞同英国奥斯瓦尔德·莫斯利所倡导的准则派改革，他们认为一个上下一致的党指挥的社会主义国家才是无产阶级革命的正路。而非现在广为流行的英法工团思想，他们认为工团组织结构过于零散，即便是拥有了政权，面对反对分子的攻击也难以长久。在革命暂时胜利的当下他们呼吁建立起一个极权主义国家，他们的领袖邓小平对于当前党内争议不休的市场问题感到疑惑，和因为权力流失到反革命手中相比，这不过是一个小问题。即便是真的像市场派倡导的那样进行市场化，只要权力足够集中，有形的手就能操作无形的手，就不需要担心资本家荼毒人民。§!"
@@ -3555,7 +3568,6 @@
  hungong.54.g:0 "习仲勋同志"
  hungong.54.h:0 "林伯渠同志"
  hungong.54.i:0 "胡耀邦同志"
- hungong.54.j:0 "赵紫阳同志"
  
 #国民党
  HNN_KMT:0 "湖南临时政府"
