--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -1741,6 +1741,7 @@
 
  KR_RKMT_wen:0 "文官政府国策树"
 
+ GXC_Hu_Hanming_hog: "胡汉民"
  GXC_ju_zheng_hog: "居正"
  GXC_zahng_qun_hog: "张群"
  GXC_sun_fo_hog: "孙科"
