--- a/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
+++ b/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
@@ -1756,6 +1756,11 @@
  lepcollapse.36.d: "新皖系军阀的毁灭与陈调元的反租界运动的失败使许多陈调元的民族主义同胞四处漂泊。在低级军官大部分要么被其他派系所吸收、要么任教于“绿林学校”的同时，大部分陈调元手下的高级将领却逃往了使馆城市、日本或者任何一个能找到工作的地方。由于非常反感中央政府对租借政策的持续支持，一个名为孙立人的年轻指挥官带着一个志同道合的随从与我们接洽，希望能加入我们的行列。\n\n作为安徽本地人，孙立人在年轻的时候就是对抗段祺瑞政府1919年反协约国抗议中的少数参加者之一。在从普渡大学毕业后，反帝信念驱使他报考了弗吉尼亚军事学院。在北伐战争就要结束时，他毕业了，成为了中国新一代军官之一。尽管我们似乎并不是他心中的第一选择，但无论如何，只要我们接受了他，他就会坚定地忠诚于我们。其他人则谴责他不过又是一个佣兵以及一个想要封疆裂土的潜在军阀，并坚持要逮捕他。"
  lepcollapse.36.a: "一个心怀崇高事业的士兵在另一个地方找到了家"
  lepcollapse.36.b: "陈调元和他的同类都是叛徒，孙立人也好不到哪里去！"
+ lepcollapse.37.t: "马登瀛逃出乱局"
+ lepcollapse.37.d: "新皖系军阀的毁灭与陈调元的反租界运动的失败使许多陈调元的民族主义同胞四处漂泊。在低级军官大部分要么被其他派系所吸收、要么任教于“绿林学校”的同时，大部分陈调元手下的高级领导却逃往使馆城市、日本或者任何一个能找到工作的地方。然而，陈调元最得力的下属，也是他左膀右臂的马登瀛带着一份有趣的提案来到了[ROOT.GetNameDef]。\n\n他只要求一份工作与薪水，便愿意我我们的政府效力。马登瀛将八省联合的盗匪统治视作一种耻辱，作为一个有原则的人，他坚定抱有反租界的立场。他作为指挥官的卓越能力也与他的立场相符，即使在八省联合的腐败环境中，他也凭借自己的才能一步步晋升。虽然毫无疑问他更倾向于和他的亲密战友陈调元共事，但他也无疑能为我们的军队提供宝贵的建议。"
+ lepcollapse.37.a: "快请他来作诗一首。"
+ lepcollapse.37.b: "三姓家奴，又想着改换门庭了。"
+
  LEP_authoritarian_democrat_party_aog: "华东董事会"
  POLITICS_LEP_QIAN_ZHUOREN_DESC:0 "§Y指挥官介绍\n生于：§!§g1890年2月6日，大清帝国江苏省宜兴县§!\n§Y派系：§!§g青岛会§!\n§Y军旅生涯：§!§g钱卓伦以其后勤与人事之管理闻名军中，而近来与德国武官亚历山大·冯·法肯豪森的交好又让其声名更显。虽然钱卓伦未必乐见德国触角深入中国，但在与法肯豪森一同改革联合部队的合作一事上却可以说是默契无间。\n\n因与法肯豪森的关系，钱卓伦得以领导起“青岛会”。所谓“青岛会”，其内多是些想要平衡德国的在中利益的亲德派官兵、知识分子和商界精英。钱卓伦认为，与其一味地抵制，倒不如信任这位朋友并与之合作来得痛快。§!"
  POLITICS_LEP_QIU_QINGQUAN_DESC:0 "§Y指挥官介绍\n生于：§!§g1902年1月27日，大清帝国浙江省永嘉县§!\n§Y派系：§!§g青岛会§!\n§Y军旅生涯：§!§g邱清泉出身贫苦农家，幼时即展现出了过人的天赋与非凡的领悟力。北伐战争期间，邱清泉初露锋芒，彼时其仅为一介籍籍无名的小将，却因作战勇猛及亲临数场血战而不倒的经历受到了德国将官的赏识。三十年代，德国有意栽培南直系，便邀请早先已获认可的邱清泉赴德接受正规军事训练，而后者也在此一过程中结实了海因茨·古德里安，对装甲作战产生了浓厚的兴趣。战场上的邱清泉以凌厉的攻势对敌人步步紧逼，而在战场之下，无论是同事还是上级，都难以与之和睦相处，虽说如此，闲暇时的邱清泉却犹喜欢吟诗作赋，与平时的作风判若两人。§!"
