--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1184,7 +1184,9 @@
  HNN_Wan_Dan_Ping: "宛旦平"
  POLITICS_HNN_Wan_Dan_Ping_DESC:0 "§Y指挥官介绍\n生于：§!§g1900年；大清帝国、湖南省新宁县§!\n§Y军旅生涯：§!§g1922年秋考入长沙岳云中学，参加学生爱国运动，结识毛泽东、何叔衡、夏明翰等人。1924年加入中国工团党。同年秋考入广州黄埔军官学校第二期，学习刻苦，成绩优异。1925年2月参加第一次讨伐军阀陈炯明的东征作战。3月初同卢德铭一起调往海丰县帮助组织训练农民自卫军。9月毕业后被分配到国民革命军第一军，任参谋。1926年秋参加北伐战争。大革命中兵败被俘，转押于长沙监狱，后被其兄保释出狱。在其出狱后，与长沙地下工作者毛泽东搭上线，随后前往工团党湖南革命根据地重新投身革命事业。§!"
  HNN_Wan_Xi_Xian: "宛希先"
- POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年，大清帝国 湖北省 黄梅县§!\n§Y军旅生涯：§!§g宛希先"
+ POLITICS_HNN_WAN_XI_XIAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年，大清帝国 湖北省 黄梅县§!\n§Y军旅生涯：§!§g宛希先"
+ HNN_Huang_ke_cheng: "黄克诚"
+ POLITICS_HNN_Huang_ke_cheng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1902年10月1日，大清帝国 湖南省 永兴县§!\n§Y军旅生涯：§!§g黄克诚出生于湖南省永兴县下青村一个贫苦农民家庭，家中常年劳作仍难以温饱。他自幼目睹社会不公，萌生改革之志。因家境贫寒，他直到19岁才首次穿上棉袄，艰苦的生活锤炼了他坚韧的性格。少年时期，他通过勤工俭学完成学业，后考入湖南省立第三师范学校，接触进步思想，逐渐投身革命浪潮。1925年，黄克诚加入中国工团党，积极投身工人运动和农民运动。大革命时期，他加入唐生智所率领的国民革命军第八军。"
  HNN_Hua_Guofeng: "华国锋"
  POLITICS_HNN_Hua_Guofeng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1921年2月16日，中华民国 山西省 交城县§!\n§Y军旅生涯：§!§g华国锋"
  HNN_Xu_Si_You: "许世友"
@@ -3255,6 +3257,9 @@
  hungong.169.d:0 "高岗主席今天会以什么样子示人呢？"
  hungong.169.a:0 "带上眼镜"
  hungong.169.b:0 "取下眼镜"
+ hungong.171.t:0 "雨落之后，云水相逢"
+ hungong.171.d:0 "点点雨星哒哒地落在马车的油布篷上，朱德裹紧被硝烟熏黑的大衣。车帘缝隙里透进的月光照着他手背的伤口，凝结的血痂像一朵枯萎的梅花。\n"先生，过了前头隘口就到湖南啦。"车夫的声音夹着湿气传来。朱德摸向腰间，铁皮油灯还在，灯罩裂了道细纹——这是三天前张副官塞给他的。那夜里机枪正把土墙打得噗噗作响，那个总爱哼小调的年轻人把油灯往他怀里一推："往东走！我们在枫叶岭还有......"后半句被炮弹声吞没了。\n车轮碾过泥泞的土路，往事如走马灯旋转，朱德闭上眼，仍能看见总务长老周被吊在电线杆上的样子，那双千层底布鞋在寒风里轻轻摇晃。\n"口令！"突兀的喝问刺破雨幕。朱德掀开车帘，望见岗亭上斜插的赤旗。穿短棉袄的卫兵举着马灯，光晕里浮着细碎的雨丝。"云岭来的。"他说出暗号时喉头发紧，生怕听到轻蔑的冷笑。却见卫兵突然立正，袖口露出缠着绷带的手腕："朱先生！董委员在等您。"\n市政厅的铜把手结着薄霜。推开门，壁炉火光映着整面墙的镰锤徽记。办公桌后的男人抬起头，“路上冻坏了吧？"董必武摘下眼镜，茶壶嘴腾起白雾，"尝尝新收的雨前茶。"\n朱德摩挲着粗陶杯壁，热水顺着喉管流进胃里。"我们失败了。"话出口他才惊觉声音沙哑得不像自己，"讲武堂、纠察队、夜校......全完了。"\n董必武转着茶杯，釉色青瓷在他掌心泛起幽光："知道粤汉铁路那次我们怎么赢的吗？"他突然起身推开窗户，寒风卷着汽笛声呼啸而入，"当洋人说要炸毁铁轨，把我们的同胞碾死的时候，我们用一百零三条人命把它填完了。"\n暗红桌布上铺开泛黄的图纸，朱德瞳孔收缩——竟是纵贯云岭与湖南的铁路线，铅笔标注的站点精确到每个山谷隘口。"反动派的兵工厂建在云岭，是因为那里有洋鬼子的工厂，还有盘根错节的地方豪族。"董必武的钢笔尖点在长江支流某处，"那如果我们把铁路修到岳阳港......"\n壁炉爆出火星，图纸上的红蓝标记在摇晃的光影里活过来。朱德看见戴鸭舌帽的工人往铁轨枕木下填碎石，看见满载煤炭的列车冲破洋巡捕的封锁线，最后看见枫叶岭焦黑的阵地上，自己那面被弹片撕碎的旗帜。\n"需要有人熟悉云岭的地形。"董必武的手指划过等高线，"你那些撤进深山的弟兄，应该记得每条山沟的走向。"\n朱德握杯的手猛地收紧。三天前他亲手埋了十七个弟兄，冻土下的脸庞还沾着机车厂的煤灰。此刻那些年轻的眼睛似乎都在壁炉火光里闪烁，等着他给出答案。\n"湖南可以出钢轨和技工。"董必武走过案台，"但要让铁路真正活起来，需要云岭的枕木——和你这位总工程师。"他朝朱德伸出手。\n窗外传来火车的轰鸣，震得茶杯泛起涟漪。朱德起身，重重地握住。那看似弱不禁风的文人之手，摸起来竟也同他一般粗糙。"
+ hungong.171.a:0 "四海翻腾云水怒 五洲震荡风雷激。"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
