--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -1243,8 +1243,8 @@
  qielepcollapse.29.d:0 "陈调元英勇的军队在安庆被击败，省府被摧毁。对我们的政府来说，这是黑暗的一天，因为许多人曾对他们寄予厚望。"
  qielepcollapse.29.a:0 "可恶！"
  qielepcollapse.30.t:0 "宁系被击败了！"
- qielepcollapse.30.d:0 "我们曾经期待齐燮元能够在八省联合的内乱中取胜并成为一个可靠的盟友。但是，现在灾难已经发生了，他的政府崩溃了，他曾经控制的地区现在陷入了混乱之中，我们现在彻底失去了对这一地区的控制和影响。对我们而言，这真是黑暗的一天。"
- qielepcollapse.30.a:0 "该死！"
+ qielepcollapse.30.d:0 "我们曾经期待齐燮元能够在八省联合的内乱中取胜并成为一个可靠的盟友。但是，现在灾难已经发生了，他的政府崩溃了，他曾经控制的地区现在陷入了混乱之中，我们现在彻底失去了对这一地区的控制和影响。如今让齐联帅保卫侧翼、复兴南直系恐怕是无望了，南京乃至华东也落入了万恶的敌政权手中，这帮人会从此开始对北京虎视眈眈。对我们而言，这真是黑暗的一天。"
+ qielepcollapse.30.a:0 "他他妈就是条癞皮狗，还偏偏是我们养的那条！"
  qielepcollapse.31.t:0 "陷入无政府状态！"
  qielepcollapse.31.d:0 "战局已经变得一塌糊涂，我们的军队几乎已经不堪一击了，经过了一年的战斗，我们的军队现在已经彻底瓦解成为了无政府的匪帮，因此北京的中央政府决议对其进行扫荡并誓将恢复秩序！"
  qielepcollapse.31.a:0 "我们要重新开始！"
@@ -1917,6 +1917,13 @@
  qiefor.141.d:0 "长沙传来了零星的电报和新闻，称直系将军汤芗铭先前企图对省会发动兵变，罢黜对直系不忠的省长[HNN.GetLeader]。当然，直系政府也含糊其辞，坚称是汤将军擅作主张采取了行动。然而，关起门来说，主要指挥官们对汤芗铭方略的失败出离愤怒，对总参谋部、直系士兵乃至汤芗铭本人都加以指责。\n\n不幸中的万幸，汤芗铭从败军之中侥幸逃脱。他把直系和自己的事业看得重于一切，宣誓对直系仍然忠心耿耿，而且要做牛做马来将功补过。当然，汤将军能力不俗，对我们的赤诚之心也昭昭可鉴。但我们能鼓起勇气招募这个败军之将吗？"
  qiefor.141.a:0 "他可以戴罪立功。"
  qiefor.141.b:0 "他？不需要了。"
+ qiefor.153.t: "南方舰队北上！"
+ qiefor.153.d: "曾经令人引以为傲的中国水师，如今的境遇却令人无比扼腕。中国的舰队曾经称霸整个亚洲的水域，还曾远征前往美洲，但如今却连自己的海岸线都无力保护。1880年代，北洋水师规模亚洲第一、世界第八，其实力即使放在现代都不容小觑。但最终，面对装备先进、训练优速的日本海军，徒具吨位的北洋水师无力抗衡，最终全军覆没。南洋水师、广东水师和福建水师后来也不幸步其后尘。\n\n但中国海军并未就此消失，在当时还年轻的筹办海军大臣萨镇冰等人的努力下，中国的海军两度复生，依靠其政治中立的军官与数量可敬的舰船尽全力保护中国漫长的海岸线。但以现状来说，曾经的北洋水师已经分崩离析，分为了萨镇冰将军指挥的北方舰队和吴振南将军指挥的南方舰队，此为奉系和广东手中也各有一支与我们敌对的舰队。\n\n在八省联合解体的混乱之后，南方北洋舰队的命运悬而未决，许多年轻的军官叛逃到国民党或反租界派阵营当中，但吴振南将军一如既往地历经风雨而不倒，靠自己对舰队的忠诚战胜了各种意识形态理念的诱惑。据报道，吴振南将军指挥的舰队大部已经抵达了我们匆忙组建的天津港口，加入了我们的舰队。萨镇冰将军、杨树庄将军和吴振南将军已经正式开会，宣布要将南方舰队纳入北方舰队的指挥结构。"
+ qiefor.153.a: "弥合分裂的第一步。"
+ qiefor.154.t: "笑面虎的小跟班"
+ qiefor.154.d: "在八省联合的尸体上，灾难在仇恨与战火交织成的地狱中横行。曾与孙传芳联帅盟誓的人要么逃进使馆城市，要么遁入黑道之中，要么投入反租界运动者的怀抱中。玉帅一如既往地以他那自鸣得意的仁慈之心训斥津保派站错了队。不过，微笑也无法掩盖吴佩孚城府内的谋算。随着八省联合的覆灭，直系的东南一线再度成为了防御的重点，而老帅张作霖也可能会利用这一点。\n\n现在，萧耀南督理已经命令其士兵驻守在鄂皖边界，而李济臣督理也采取了类似的措施，这使得我们无力组织可靠的防御力量，以抵御山西省的“渔翁大帅”阎锡山督理以及在陕西省的叛徒冯玉祥。即使是我们最差劲的战略家，也能看出直系军阀已经处于不利的境地之中了。然而正是在这危急存亡的至暗时刻，出现了一缕奇迹般的曙光。\n\n许多人以为，笑面虎的军队早已作鸟兽散，这就是大多数桀骜不驯的军阀的归宿，而且，我们的装备和人力也会随他们一道被葬送。然而，就在玉帅于洛阳的指挥所中进行激烈的讨论之时，指挥官于学忠闯入了会场，他还随着携带着一封电报，身后还有一众诸如刘宗纪、孟昭月和谢鸿勋这样的人。他们都是笑面虎的亲信，是臭名昭著的重量级人物，他们带着自己的人马和武器前来投奔北直隶。王承斌大帅欣然接受了他们的提议，不过直系军阀的最高指挥部可是两把枪说了算的，而关键的一票落在了玉帅身上。"
+ qiefor.154.a: "听好了，今后你们全凭*我们*吩咐。"
+ qiefor.154.b: "这是要让孙传芳的腐败习气侵蚀我军吗？"
  qieflavor.1.t:0 "突袭黑娼寮！"
  qieflavor.1.d:0 "天上下着冷雨，张蓓交，北京巡警厅的巡长，安排他的手下在燕郊一家破旧的建筑附近执勤。舒缓的音乐从楼宇中传出，弥漫的烟雾渐渐遮蔽了窗棂。\n\n“您觉得着这回是丫头儿还是大烟儿？”巡长的佥事问他。“都是，要是我错了，明儿的午饭我掏钱。”张蓓交踩灭了他的香烟，并吹响了挂在胸前的哨子。六名警官破门而入涌进昏暗的大厅。张蓓交大声喊道：“巡警总厅，不许动！”，随后衣不蔽体的，大声尖叫谩骂着的各色男女被警官带到大厅内。张巡长举着一小袋鸦片在佥事面前晃了晃，说：“看来打明儿晌午这饭，得您自个儿掏钱了。”\n\n警员们将毒贩和妓女们围成一圈。此次“收获”颇丰，发现了大量的鸦片、大麻甚至还有德国的可卡因。就在巡长准备命令他的部下将狎客、毒贩和娼妓们通通拖进警车的时候，一名警官喊道：“大人，您得看看这个！”张蓓交无法相信自己的眼睛，一个高大、金发碧眼的洋人在乌泱泱的犯人中鹤立鸡群，那洋人用很蹩脚的口音说道：“德国大使馆会知道这件事的！我上面有人！”\n\n逮捕这人会体现中央政府急切希望体现的控制力并遏制德国人的影响，但这势必会需要高昂的政治代价。不过另一方面说来，天知道如果张蓓交真的放了这人，又会发生什么……"
  qieflavor.1.a:0 "张巡长逮捕了他"
