--- a/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
+++ b/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
@@ -680,7 +680,7 @@
  lepcollapse.10.d: "今天下午在芜湖发生的抗议得到了附近德资企业罢工工人的支持，很快就脱离了警方的控制范围。卫戍部队得到了一些南京的经过德国训练的部队的支持，他们尝试恢复秩序，但是在混乱的斗殴中，有人开始开枪。在几分钟的时间里，警察、卫戍部队和他们的援兵就开始对着群众以及相互之间乱射一气，将近两百多人被确认死亡，有四倍多的人数受伤，这一结果引起的愤怒很快点燃了周边地区的抗议之火。\n\n局势由于城内存在一个外国人定居区而变得更糟了。许多人声称这些杀了人的部队只是用来保护外国人的，这起杀戮的新闻大概很快就会在明早的国际新闻上露面。"
  lepcollapse.10.a: "事情还能更糟吗？"
  lepcollapse.11.t: "安庆拒绝进一步合作"
- lepcollapse.11.d: "陈调元督理在提及最近芜湖发生的事件的时候，发布了一项关于从安徽撤出所有非本省军队的最后通牒，并要求立刻移交涉事军官。尽管陈调元向联合做出保证，他的士兵将会继续镇压骚乱，维持秩序，但他拒绝和八省联合的官员合作，以及谴责建设华中铁路，声称正是这件事“把爱国的市民逼上了绝路”。\n\n在正常的情况下，他的行为不可接受，但是陈调元的立场被证明很有人气，而且这一决绝的举动可能会进一步分化已经脆弱的八省联合。"
+ lepcollapse.11.d: "在单方面提出了要求之后，陈调元督理不等联帅回应就正式宣布退出八省联合。芜湖事变爆发后，陈调元将自己的要求升级成了最后通牒，他要求所有非安徽省的军队全部撤出本省，并立即向安徽移交那些对芜湖事变负有责任的警察。尤为可耻的是，陈调元还向联帅保证说，他自己的士兵将继续“平息不断蔓延的骚乱失序”，说的好像他这么做过一样。\n\n陈调元拒绝与八省联合当局进一步合作，并进一步谴责华中铁路的修建是在“将爱国公民推向绝望的边缘”。“陈傻子”一直都是我们的眼中钉肉中刺，而这次他终于摊牌了。哗众取宠的陈调元不断支持和煽动针对八省联合及联帅本人的强烈抗议和愤怒，但他这么做只是为了摆脱“笑面虎”的掌控。\n\n若是平时，这种行为只会招致迅速而残酷的惩罚。但凭借其政治站位、与反租界主义者的关系，以及媒体的宣传，陈调元督理把自己塑造成一个民族主义英雄，这让联帅感到骑虎难下。若是现在采取果断行动，很可能会导致本就脆弱的八省联合进一步崩溃。但话虽如此，此等行径也绝对无法容忍，孙传芳联帅已经向忠于自己的谢鸿勋，刘宗纪，孟昭月和马玉仁等将军发出了命令，要求他们随时准备好与皖军发生冲突。"
  lepcollapse.11.a: "我们必须等待时机"
  lepcollapse.11.b: "让我们跟陈长官干了！（扮演安庆继续游戏）"
  lepcollapse.12.t: "黑色星期一波及东方"
