现在湖南的绝大部分内阁都解锁了

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -168,6 +168,8 @@
  HNN_tang_shengming:0 "唐生明"
  HNN_tao_zhiyue:0 "陶峙岳"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
+ HNN_lu_diping_advisor_desc: "§Y生于：§!§L1887年；大清帝国、湖南省宁乡§!\n§Y派系：§!§l第二军§!\n§Y背景：§!§L鲁涤平于清朝末年投身革命政治，并且参加了辛亥革命。1915年，鲁涤平加入了孙中山的革命阵营，同时在湘军任职。随后几年，鲁涤平壮大为湖南的重要军阀之一，他在赵恒惕和谭延闿之间摇摆不定。因其部下同情谭延闿，鲁涤平最终倒向谭延闿一方，并在赵恒惕将谭延闿逐出湖南后与他一同流亡。\n\n1925年，谭延闿的部队被改编为国民革命军第二军，鲁涤平被任命为副司令。北伐战争中，鲁涤平和第二军入湘作战，但战事最终演变成了一场灾难，国民党对武汉的进攻激怒了德国人，导致他们下场干预。在国民党被彻底击溃后，湖南的第二军陷入了重围。在赵恒惕提出全面赦免第二军后，鲁涤平和谭延闿才得以幸免。自那之后，鲁涤平在湖南过着平静的生活，但如果情况有变，谭延闿有需要时他，他随时准备为之效力§!"
+ HNN_Hu_Shuhua_eco_sco_desc: "§Y生于：§!§L1886年12月14日；大清帝国、湖南省攸县§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L1903年，胡庶华通过清朝科举考试，考入湖南私立明德学校学习，后来又公费留学德国，先入柏林矿科大学，再转入柏林工科大学学习。1920年，胡庶华以钢铁冶金工程师学位毕业，两年后带着在欧洲各地钢铁厂参观学到的现代工业金属加工技术回国。\n\n回到湖南后，胡庶华被湖南工业专门学校校长宾步程聘为事务主任。后来，他还担任过武昌、同济和湖南大学的校长。胡庶华在湖南大学落实他在实践和教育层面上对工业发展的愿景，恢复了矿冶工程系，并邀请了许多专家来校任教。\n\n胡庶华强调学生的工业教育，提倡与省内矿冶企业协作交流，并致力于将湖南大学建设成全国钢铁冶金人才培养的重镇。1934年夏天，胡庶华在湖南筹办了中国经济学社第11届学术年会，这是该年会首次在华东新兴沿海城市之外举办。§!"
  HNN_li_jiannong_for: "李剑农"
  HNN_li_jiannong_for_desc:0 "§Y生于：§!§L1880年6月10日；大清帝国、湖南省邵阳§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L李剑农生于一户农民家庭，长大后在当地的一所书院就读。李剑农对当地不学无术的官员极为不满。1904年，他进入湖南中路师范学堂学习，主修历史，并顺利毕业。在日本学习经济学期间，李剑农与孙中山和同盟会相识。清朝覆灭后，李剑农成为了民国的坚定拥护者。\n\n李剑农在自己的报纸上鼓吹联省自治，抨击军阀乱政。李剑农对联省自治和改良政治的研究引起了湖南省长赵恒惕的注意，赵恒惕于1922年邀请李剑农到长沙起草省宪。此后，李剑农留在湖南，帮助赵恒惕推行其政治纲领。李剑农在推动联省自治方面的工作使他成为了赵恒惕的得力助手和湖南联省派中的一位出色理论家。§!"
  HNN_huang_gonglue_sec: "黄公略"
@@ -551,6 +553,14 @@
  HNN_vital_economic_linchpin_tt:0 "§L我国经济相关的国家精神将整合为一个§Y全新的国家精神！§!§!"
  HNN_industrial_reform_complete_tt:0 "§L我们现在可以选取§Y“[HNN_fostering_national_reconstruction_loc]”§!并推进湖南工业树§!"
  HNN_clearing_house_tt:0 "§L我们采纳新军事学说的工作势必十分艰巨，但其最终将会使我们获得§!§Y50§!£GFX_army_experience §L作为回报§!"
+ HNN_hu_shuhua_effect: "§Y工业相关的决议§!增强"
+ HNN_hu_shuhua_add_tooltip:0 "使$HNN_hu_shuhua_effect$"
+ HNN_hu_shuhua_helpful_tooltip:0 "§n有胡庶华作为顾问会使$HNN_hu_shuhua_effect$§!"
+ HNN_hu_shuhua_is_helpful_tooltip:0 "§G胡庶华在我们的政府中工作会$HNN_hu_shuhua_add_tooltip$§!"
+ HNN_lu_diping_effect: "§Y乡村相关的决议§!增强"
+ HNN_lu_diping_add_tooltip:0 "使$HNN_lu_diping_effect$"
+ HNN_lu_diping_helpful_tooltip:0 "§n有鲁涤平作为顾问会使$HNN_lu_diping_effect$§!"
+ HNN_lu_diping_is_helpful_tooltip:0 "§G鲁涤平在我们的政府中工作会$HNN_lu_diping_add_tooltip$§!"
 
  modifier_army_sub_unit_irregular_max_org_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_max_org_factor$：$RIGHT|+=%2$"
  modifier_army_sub_unit_irregular_attack_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_attack_factor$：$RIGHT|+=%2$"
