--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -1240,8 +1240,8 @@
  qielepcollapse.28.d:0 "尽管吴佩孚在采取了最大的外交努力试图安抚陈调元，但是现在他好像已经脱离了我们能控制的范围了。根据边防最近的消息，一些难民们攥着臭名昭著的黑龙会的小册子越过边界进入了我们的地界。新皖系高层对我们的沉默使得情况变得愈发令人不安。能够证明陈调元和黑龙会有所合作的证据越累越多。陈调元很可能不仅仅背叛了吴佩孚大帅和皇帝陛下，甚至可能已经公然允许日本间谍进入他控制下的城市，自己做了汉奸。"
  qielepcollapse.28.a:0 "杀千刀的日本鬼子！"
  qielepcollapse.29.t:0 "新皖系被击败了！"
- qielepcollapse.29.d:0 "陈调元英勇的军队在安庆被击败，省府被摧毁。对我们的政府来说，这是黑暗的一天，因为许多人曾对他们寄予厚望。"
- qielepcollapse.29.a:0 "可恶！"
+ qielepcollapse.29.d:0 "南方的内战有了新的情况，被我们寄予厚望的陈调元败给了齐燮元那家伙，陈调元的省政府被拔除殆尽，这“傻子”要么命丧沙场，要么设法遁入了城内的暗处，要么就是逃去了哪个愿意接纳他的政权的庇护之下。对于我们来说这无异于一场灾难，玉帅不得不感到后悔当初为什么听信了这家伙的胡话，现在我们不得不担心我们的东南边境了。"
+ qielepcollapse.29.a:0 "雪暄徒有莽勇，只叹志大才疏。"
  qielepcollapse.30.t:0 "宁系被击败了！"
  qielepcollapse.30.d:0 "我们曾经期待齐燮元能够在八省联合的内乱中取胜并成为一个可靠的盟友。但是，现在灾难已经发生了，他的政府崩溃了，他曾经控制的地区现在陷入了混乱之中，我们现在彻底失去了对这一地区的控制和影响。如今让齐联帅保卫侧翼、复兴南直系恐怕是无望了，南京乃至华东也落入了万恶的敌政权手中，这帮人会从此开始对北京虎视眈眈。对我们而言，这真是黑暗的一天。"
  qielepcollapse.30.a:0 "他他妈就是条癞皮狗，还偏偏是我们养的那条！"
